Wed Mar  9 22:03:44 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataSampleHeader.h:
        * dds/DCPS/DataSampleList.h:
        * dds/DCPS/transport/framework/DataLinkSet.h:

          Attempting to fix Doxygen comment formatting.

        * dds/DCPS/transport/framework/TransportDefs.h:

          Removed a duplicate #include.

Wed Mar  9 20:54:03 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/InfoRepo/DCPSInfoRepoServ.cpp:

          Now that Service_Participant (as of Tue Mar  8 20:11:23) is releasing
          its reference on the POA  (and the other references are cleaned up)
          the ORB really is shutting down and going away, the entirity of
          finalize() can't be called from within our event handler inside of
          ORB::run().  Instead call finalize() after run() returns.  This could
          break code that's depending on calling run() multiple times, but we
          don't know of such code.

Wed Mar  9 20:26:52 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.model/model/Core.ecore:

          Added Element class and Comment class with Element optionally owning a Comment.
          Entity now inherits from Element.

        * tools/modeling/plugins/org.opendds.modeling.model/model/OpenDDS.ecore:
        * tools/modeling/plugins/org.opendds.modeling.model/model/Types.ecore:

          Updated so that all class (eventually) inherit from Element. This way comments
          can be added to all modeling elements.

        * tools/modeling/plugins/org.opendds.modeling.model/model/OpenDDS.genmodel:

          Re-generated and set Multiline property for Comment body to true.

        * tools/modeling/plugins/org.opendds.modeling.model/model/Core.ecore_diagram:
        * tools/modeling/plugins/org.opendds.modeling.model/model/OpenDDS_dup_DataLib.genmodel:
        * tools/modeling/plugins/org.opendds.modeling.model/model/OpenDDS_dup_DcpsLib.genmodel: